--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div>
+      <hr />
+      <footer className='foot'>Desarrollado por Sotecpro 2022 <span>©</span></footer>    
+    </div>
+
     
+    <!-- Minified JS library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Compiled and minified Bootstrap JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
   </body>
+  
 </html>
