--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="../components/ejemplo/_ejs_library/css/ejss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <title>Proyecto Modelo de Ingeneria</title>
@@ -27,6 +28,12 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
+    <!--app-->
+    <script src="../src/components/ejemplo/EjsS_5.3/bin/javascript/lib/ejsS.v1.min.js"></script>
+    <script src="../src/components/ejemplo/EjsS_5.3/bin/javascript/lib/scripts/common_script.js"></script>
+    <script src="../src/components/ejemplo/EjsS_5.3/bin/javascript/lib/scripts/textresizedetector.js"></script>
+
+    <script type='text/javascript' src='../src/lib/descartes-min.js'></script>
 </body>
 
 </html>
